frontend/src/index.css
/* Navigationbar1 */

@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap");

.navigation-bar {
  padding: 0 3%;
  margin: 0.6%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navigation-bar-right {
  display: flex;
  font-size: 130%;
  flex-direction: row;
  justify-content: flex-end;
  align-items: flex-end;
  margin-right: 1%;
}

.navigation-bar-logo {
  font-size: 230%;
  font-family: Montserrat, sans-serif;
  font-weight: 800;
  letter-spacing: 0.2px;
  color: rgba(64, 218, 199, 1);
  word-wrap: break-word;
  cursor: pointer;
  margin-left: 1%;
}

.main-wrapper {
  background-color: rgba(64, 218, 199, 1);

}

button {
  background-color: white;
  border-style: none;
  cursor: pointer;
  padding: 0 20px;
}

.main-page-body {

  position: relative;  
  font-family: Montserrat, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.body-phrase1 {
  margin-top: 1.7%;
  font-weight: 800;
  font-size: 4.5em;
  width: 45%;
  background-color: white;
  text-align: center;
  border: 12px solid black;
  box-shadow: 12px 12px black;
}

.body-phrase2 {
  position: relative;
  font-size: 2.3em;
  text-align: center;
  font-weight:bold;
  margin: 3%;
  z-index: 0;
}

.main-photo1 {
  text-align: center;
  /* width: 50%; */
}

.main-photo {
  width: 30%;
  height: 30%;
}

.main-page-enter-btn {
  text-align: center;
  padding: 0;


}


ul.navigation-bar-vertical {
  display: flex;
  flex-direction: column;
  align-items: flex-start;

  list-style-type: none;
  margin-top: 70px;
  font-family: Montserrat, sans-serif;
}

li {
  margin: 20px;
}


/* login */
.auth-loader {
  display: flex;
  flex-direction: column;
  margin-top: 10%;
  align-items: center;

}
.display-3 {
  margin-top: 2%;
}
.auth-loader-wrapper {
  display: flex;
  flex-direction: column;
  align-content: center;

}

/* .loading-spinner {

} */


.wrapper-login {
  padding-top:5%;
  /* margin: 50px;
  margin-top: 50px; */
  display: flex;
  flex-direction: column;
  background-color:white;
  justify-content: center;
  /* align-items: center; */
}

.login-navigation-bar-logo{
  font-size: 500%;
  font-family: Montserrat, sans-serif;
  font-weight: 800;
  letter-spacing: 0.2px;
  color: rgba(64, 218, 199, 1);
  word-wrap: break-word;
  cursor: pointer;
  margin-left: 1%;

}
.login-body {
  display: flex;
  justify-content: center;
}
.login-phrase-image-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.login-box {
  position: relative;
  height: 100%;
  border: 1px solid #ffffff;
  margin-top: 6.75rem;
  display: block;
  width: 100%;
  align-items: center;

  margin-bottom: 3.75rem;
  text-align: center;
}

.login-box2 {
  width: 100%;
  border: 1px solid #d7d7d7; 
  margin-top: 6.75rem;
  background: #ffffff; 
  border-radius: 0.9375rem; 
  margin-top: 1.875rem;
}

img.login-photo {
  text-align: center;
  /* display: block; */
  width: 30vw;
  /* margin-top: 10%; */
  margin-right: 10%;
}

.kakaoImage {
  text-align: center;
  margin-left: 10%;
  margin-top: 15%;
}

.login-phrase1 {
  color: black;
  font-size: 2.5rem;
  font-weight: 700;
  text-align: left;
  margin-left: 10%;
  width: 100%;
}

.login-phrase2 {
  color: rgba(64, 218, 199, 1);
  font-size: 2.5rem;
  font-weight: 700;

}

/* training */

.training-navigation-bar {
  padding: 0 3%;
  margin: 0.6%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}


.training-navigation-bar-logo {
  font-size: 230%;
  font-family: Montserrat, sans-serif;
  font-weight: 800;
  letter-spacing: 0.2px;
  color: rgba(64, 218, 199, 1);
  word-wrap: break-word;
  cursor: pointer;
  margin-left: 3%;
}

.training-navigation-link-share-icon {
  display: flex;
  font-size: 130%;
  flex-direction: row;
  justify-content: flex-end;
  align-items: flex-end;
  margin-right: 3%;
}





.training-navigation-bar-logo {
  font-size: 40%;
  font-family: Montserrat, sans-serif;
  font-weight: 800;
  line-height: 250%;
  letter-spacing: 0.2px;
  color: rgba(64, 218, 199, 1);
  width: 369px;
  height: 26px;
  word-wrap: break-word;
  width: 100%;
  height: 50px;
  margin-bottom: 30px;
}

.traing-inner-box {
  width: 100%;
  height: 750px;
  margin-top: 20px;
  background-color: #4e4b4b;
}

.traing-footer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

/* .training-container-box { */
/* width: 100vw;
  height: 100vh; */
/* margin-top: 10px;
  display: flex;
  justify-content: center; */
/* align-items: center; */
/* } */

.training-grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 120px;
}

.training-grid-container-box {
  display: flex;
  justify-content: center;
  align-items: center;
}

.others-lobby-header2 {
  /* display: flex;
  justify-content: space-between;
  height: 200px;  미정이 css*/

  /* 뷰트캠프 css */
  min-width: 272px;
  height: 100vh;
  position: fixed;
  background-color: white;
  z-index: 9;
}

/* .others-lobby-header2 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
} */

/* training alone */
.training-alone-dropbox {
  justify-content: center;
}

.others-lobby-enter-room-btn-container {
  display: flex;
  justify-content: end;

}

.others-lobby-enter-room-btn {
  /* margin: 70px 100px; */
  margin: 1% 3%;
  /* float: right; */
  font-size: xx-large;
  padding: 10px 60px;
  background-color: rgba(64, 218, 199, 1);
  /* border: 3px solid #074f51; */
  border-radius: 10px;
  font-family: Montserrat;
}

.add-face-filter-voice-btn {
  border: 2px solid rgba(64, 218, 199, 1);
  color: black;
  padding: 14px 28px;
  font-size: 16px;
  cursor: pointer;
  margin: 10px;
  border-radius: 10px;
}
.add-face-filter-voice-btn:hover {
  background-color:  rgba(64, 218, 199, 1);
  color: black;

}

.video-delete-btn {
  border: 2px solid rgba(64, 218, 199, 1);
  color: black;
  padding: 14px 28px;
  font-size: 1rem;
  cursor: pointer;
  margin: 11px;
  border-radius: 10px;
}

.video-delete-btn:hover {
  background-color: rgba(64, 218, 199, 1);
}


.webcamalone {
  margin-right: 800px;
}

.section {
  margin: 15px;
}

@font-face {
  font-family: "DohyeonRegular";
  src: url("../assets/fonts/DoHyeon-Regular.ttf");
}

@font-face {
  font-family: "DohyeonRegular";
  src: url("../assets/fonts/DoHyeon-Regular.ttf");
}

@font-face {
  font-family: "DohyeonBlack";
  src: url("../assets/fonts/NotoSansKR-Black.otf");
}

@font-face {
  font-family: "DohyeonBold";
  src: url("../assets/fonts/NotoSansKR-Bold.otf");
}

@font-face {
  font-family: "DohyeonMedium";
  src: url("../assets/fonts/NotoSansKR-Medium.otf");
}

@font-face {
  font-family: "DohyeonLight";
  src: url("../assets/fonts/NotoSansKR-Light.otf");
}

@font-face {
  font-family: "DohyeonLight";
  src: url("../assets/fonts/NotoSansKR-Light.otf");
}

@font-face {
  font-family: "PretendardMedium";
  src: url("../assets/fonts/Pretendard-Medium.otf");
}

@font-face {
  font-family: "PretendardRegular";
  src: url("../assets/fonts/Pretendard-Regular.otf");
}

.big_wrapper {
  min-height: 100vh;
  box-sizing: border-box;
  background: rgb(245, 245, 251);
}

/* .anything_woosik {
  width: 100%;
  /* margin-right: 45%; */



.main-image-button-container {
  display: flex;
  background-color: rgba(64, 218, 199, 1);
  justify-content: center;

}

.button.main-page-enter-btn {
  margin: 30px;
  background-color: rgba(64, 218, 199, 1);
}

.main-page-enter-body-container {
  background-color: rgba(64, 218, 199, 1);

}

.alone-btn-img {
  background-color: rgba(64, 218, 199, 1);
  width: 14%;
  height: 14%;
  cursor: pointer;
}

.together-btn-img {
  background-color: rgba(64, 218, 199, 1);
  width: 12%;
  height: 12%;
  cursor: pointer;
}

.together-btn-img:hover {
  transform: scale(1.3);
  cursor: pointer;
}

.main-page-enter-body-container {
  background-color: rgba(64, 218, 199, 1);
}

.alone-btn-img:hover {
  transform: scale(1.3);
  cursor: pointer;
}

